--- a/CentralSoundScienceFair-main/CentralSoundScienceFair-main/index.html
+++ b/CentralSoundScienceFair-main/CentralSoundScienceFair-main/index.html
@@ -207,7 +207,7 @@
 
     <script>
       Q3D.Config.allVisible = true;
-      Q3D.Config.localMode = true;
+      Q3D.Config.localMode = false;
 
       var container = document.getElementById("view"),
         app = Q3D.application,
