--- a/CentralSoundScienceFair-main/CentralSoundScienceFair-main/index.html
+++ b/CentralSoundScienceFair-main/CentralSoundScienceFair-main/index.html
@@ -206,8 +206,8 @@
     </div>
 
     <script>
-      Q3D.Config.allVisible = true;
-      Q3D.Config.localMode = false;
+      Q3D.Config.allVisible = false;
+      Q3D.Config.localMode = true;
 
       var container = document.getElementById("view"),
         app = Q3D.application,
