--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       id="qr"
       class="absolute mt-2 ml-2 p-2 bg-white shadow-md rounded-lg bottom-10 invisible lg:visible"
     >
-      <img src="HAQR" alt="QR code" class="w-60 h-60 h-auto" />
+      <img src="HAQR.png" alt="QR code" class="w-60 h-60 h-auto" />
     </div> 
 
     <!-- header and footer -->
