--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
       <div id="animbtn" class="hidden text-white rounded cursor-pointer"></div>
     </div>
 
-     <div
+     <!--<div
       id="qr"
       class="absolute mt-2 ml-2 p-2 bg-white shadow-md rounded-lg bottom-10 invisible lg:visible"
     >
       <img src="HAQR.png" alt="QR code" class="w-60 h-60 h-auto" />
-    </div> 
+    </div> -->
 
     <!-- header and footer -->
     <div
